# GasGuard

./: .gitignore  Cargo.toml  README.md  README_USAGE.md  nest-cli.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
apps/api/: Cargo.toml  README.md  TIMEOUT_IMPLEMENTATION.md  package-lock.json  package.json  tsconfig.json
apps/api/src/: app.module.ts  main.rs  main.ts
apps/api/src/analyzer/: analyzer.controller.ts  analyzer.module.ts  analyzer.service.ts
apps/api/src/example/: example.controller.ts
apps/api/src/queue/: index.ts
apps/api/src/scan/: scan.controller.ts  scan.module.ts  scan.service.spec.ts  scan.service.ts  worker-scan.service.ts
apps/api/src/scan/interfaces/: scan.interface.ts
apps/api/src/scan/workers/: scan.worker.ts
crates/engine/src/: analyzer.rs  engine.rs  parser.rs  report.rs
examples/: optimized_contract.rs  redundant_external.vy  sample_contract.rs
libs/engine/: Cargo.toml  tsconfig.engine.json
libs/engine/analyzers/: index.ts  rust-analyzer.ts  solidity-analyzer.ts
libs/engine/core/: analyzer-interface.ts  analyzer-registry.ts  index.ts
libs/engine/src/: analyzer.rs  lib.rs  scanner.rs
tests/: integration_tests.rs  soroban_scan.spec.ts
