[package]
name = "gasguard-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
gasguard-rules = { path = "../../packages/rules" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.0"
